# vortex

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
docs/plans/: design-system.md  phase-2-backend.md  phase-3-frontend-shell.md  phase-4-pages.md  staged-splashing-treasure-agent-af5f88803d2c09ff0.md  staged-splashing-treasure.md
scripts/: download-cores.sh  generate_image.py
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  state.rs
src-tauri/src/config/: mihomo_gen.rs  mod.rs  xray_gen.rs
src-tauri/src/core/: mod.rs
src-tauri/src/subscription/: fetcher.rs  mod.rs  parser.rs
src-tauri/src/system/: proxy.rs
src/layouts/: app-layout.tsx  sidebar.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: connections.tsx  dashboard.tsx  logs.tsx  profiles.tsx  proxies.tsx  settings.tsx
src/stores/: atoms.ts
src/types/: core.ts
