[package]
name = "vortex"
version = "0.1.0"
description = "Multi-core VPN client"
authors = ["Vortex Contributors"]
edition = "2021"

[lib]
name = "vortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
tempfile = "3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
url = "2"
sha2 = "0.10"
hex = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
